# KTPMUD_20231_145544

./: .gitignore  Containerfile  README.md  buid.sh  build-log.txt  index.html  index.template.html  main.cpp  parking_history.json  parking_lots.json  students.json
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 026a6218873c_add_foreign_key_to_nhanvien_table.py  33e10b7bda9a_crate_table_detail_event.py  3aed911a32b5_create_admin_table.py  3aed911a32b5_create_table_users.py  4692803039df_create_phiphat_table.py  4e883f2a03df_create_nhanvien_table.py  79b36623ee32_create_table_event.py  8022adc2255e_create_table_phiphat.py  83c721e39dfa_create_table_khachhang.py  a6b135847139_create_employee_table.py  a714836f77ac_create_nguoidung_table.py  aad7fbd731f7_create_client_table.py  aad7fbd731f7_create_infouser_table.py  bb8038855510_create_event_detail_table.py  ce0bab936bfe_create_event_table.py  e0d524a2ef36_create_table_hopdong.py  f4c390e9c080_create_contract_table.py  f5092c86e9e8_create_employee_table.py
backend/app/: config.py  database.py  main.py  models.py  oauth2.py  utils.py
backend/app/api/: apirouter.py
backend/app/crud/: base.py  crud_event.py  crud_user.py
backend/app/enums/: userenums.py
backend/app/exceptions/: apiexceptions.py
backend/app/messages/: apimsg.py  usermsgs.py
backend/app/routers/: Auth.py  User.py
backend/app/schemas/: client.py  contract.py  detail_event.py  employee.py  event.py  info_user.py  token.py  user.py
backend/app/service/: employeeservice.py  (+1 more)
(+109 files in other folders)
